expense-management-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-management-service
  namespace: expense-management-service
  labels:
    app: expense-management-service
spec:
  selector:
    app: expense-management-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
